# VDT_project

./: .gitignore  PLAN.md  README.md  STRUCTURE.md  TASKS.md  pyproject.toml  requirements.txt
config/: config.yaml  config.yaml.example  logrotate.conf
docs/: deploy.md  design.md
packaging/: build_deb.sh  build_rpm.sh  postinstall.sh  preremove.sh
src/monitoring_agent/: alerter.py  config.py  logger.py  main.py
src/monitoring_agent/collectors/: __init__.py  cpu.py  disk.py  fs_watcher.py  memory.py  network.py
systemd/: monitoring-agent.service
tests/: conftest.py  test_alerter.py  test_collectors.py  test_config.py  test_fs_watcher.py  test_logger.py
