[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monitoring-agent"
version = "1.0.0"
description = "Linux system monitoring background service"
requires-python = ">=3.10"
dependencies = [
    "psutil>=5.9.0",
    "watchdog>=3.0.0",
    "PyYAML>=6.0",
    "APScheduler>=3.10.0",
]

[project.scripts]
monitoring-agent = "monitoring_agent.main:main"

[tool.setuptools.packages.find]
where = ["src"]
